# Copyright (c) 2020-2020 Delonon Liu <DelononLiu@gmail.com>.
# Licensed under the MIT License <http://opensource.org/licenses/MIT>.

cmake_minimum_required(VERSION 3.2)

project(NanoInfra)

include_directories(include)

add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(sample)
